# rocket-simple-api-example

./: Cargo.toml  README.md
config/: Settings.toml
src/: main.rs
src/fairings/: apikey_fairing.rs
