[package]
name = "rocket-sqlx-authentication-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
#sea-orm = { version = "^0.9.0", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "mysql", "chrono", "macros", "migrate", "uuid", "json" ] }
rocket = { version = "0.5.0", features = ["json", "secrets"] }
config = {version = "0.13.4", features = ["json5"] }
async-trait = "0.1.77"
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
serde_with = "3.4.0"
simple-log = "1.6.0"
serde_derive = "1.0.195"
toml = "0.8.8"
chrono = "0.4.31"
jwt-simple = "0.12.6"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["file_appender"] }
