[package]
name = "rocket-sqlx-authentication-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = [ "runtime-tokio-rustls", "mysql", "chrono", "macros", "migrate", "uuid", "json" ] }
rocket = { version = "0.5.0", features = ["json", "secrets"] }
config = {version = "0.14.0", features = ["json5"] }
anyhow = "1.0.79"
serde = { version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["file_appender"] }
